2021-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in:
	  Helper rule for testing pdk ports.

2021-03-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Some small improvements and fixes in register handling.

2021-03-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve nibble swap.

2021-03-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Fix regressions coused by previous change.

2021-03-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Add basic support for SWAP iCode for all Z80 ports.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issue that resulted in adc hl, hl being emitted on gbz80.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/typeof.h:
	  Remove apparently unused header that has been broken for many years.
	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Flexible register handling for GETBYTE.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c,
	  src/z80/mappings.i:
	  Use placeholders more and add new ones. (Improves rgbds asm generation)

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve register pair handling in code generation.

2021-03-10 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Add basic support for GETBYTE iCode for all Z80 ports.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of iyl and iyh in + and | for eZ80.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c,
	  support/makebin/makebin.c:
	  Fix help texts for gbz80.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c: Get parameters faster on gbz80 sometimes.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/gbz80/setjmp.s:
	  Rewrite setjmp for gbz80.
